--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,10 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.LiveScore" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-    </style>
+<resources>
+    <!-- Chế độ tối -->
+    <style name="AppTheme.Dark" parent="Theme.AppCompat.DayNight.DarkActionBar">
+        <item name="colorPrimary">@color/colorPrimaryDarkDark</item>  <!-- Màu chính tối -->
+        <item name="colorPrimaryDark">@color/colorPrimaryDarkDarker</item> <!-- Màu chính tối nhất -->
+        <item name="colorAccent">@color/colorAccentDark</item>        <!-- Màu phụ tối -->
 
-    <style name="Theme.LiveScore" parent="Base.Theme.LiveScore" />
+        <item name="android:windowBackground">@color/colorBackground</item> <!-- Màu nền tối -->
+    </style>
 </resources>
