--- a/app/src/main/res/drawable/input_background.xml
+++ b/app/src/main/res/drawable/input_background.xml
@@ -1,7 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#FFFFFF"/>
     <corners android:radius="8dp"/>
-    <solid android:color="@android:color/white"/>
-    <stroke android:width="1dp" android:color="#DDDDDD"/>
+    <stroke android:color="#E0E0E0" android:width="1dp"/>
 </shape>
