--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,7 +49,7 @@
         android:id="@+id/textRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Chưa có tài khoản? Đăng ký ngay"
+        android:text="Chưa có tài khoản? Đăng ký"
         android:textColor="@color/primary"
         android:layout_marginTop="16dp"
         android:textSize="14sp"
