--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,7 +4,10 @@
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home"
         android:title="Home" />
-
+    <item
+        android:id="@+id/navigation_standings"
+        android:icon="@drawable/ic_trophy"
+        android:title="Standing" />
     <item
         android:id="@+id/navigation_favorite"
         android:icon="@drawable/ic_favorite"
@@ -14,4 +17,6 @@
         android:id="@+id/navigation_settings"
         android:icon="@drawable/ic_settings"
         android:title="Settings" />
+
+
 </menu>
