--- a/app/src/main/res/drawable/badge_finished.xml
+++ b/app/src/main/res/drawable/badge_finished.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <corners android:radius="12dp"/>
-    <solid android:color="@color/gray"/>
+    <solid android:color="@color/light_gray"/>
     <padding android:left="8dp" android:right="8dp"/>
 </shape>
