--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:text="Bạn chưa có trận đấu yêu thích nào"
         android:textSize="16sp"
-        android:textColor="@color/gray"
+        android:textColor="@color/light_gray"
         android:visibility="gone"
         android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
